<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/default_btn"
                android:text="@string/btn_history" />


            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/default_btn"
                android:text="@string/btn_setting" />

            <Button
                android:id="@+id/btn_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/default_btn"
                android:text="@string/btn_reload" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/default_btn"
                android:text="@string/btn_del" />

            <Button
            android:id="@+id/btn_servicer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/default_btn"
            android:text="@string/btn_servicer" />

            <Button
                android:id="@+id/btn_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/default_btn"
                android:text="@string/btn_input" />

<!--            <Button-->
<!--                android:id="@+id/btn_search"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/default_btn"-->
<!--                android:text="@string/btn_search" />-->



        </LinearLayout>


        <FrameLayout
            android:id="@+id/mainfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>



